@@ -8,6 +8,10 @@
 
 2013-12-21  Holger Seelig  <holger.seelig@yahoo.de>
 
+	* LoadSensor.wrl: 
+
+2013-12-21  Holger Seelig  <holger.seelig@yahoo.de>
+
 	* Library.mdproj:
 	* LoadSensor.wrl: 
 
